# vortex_project_two

./: README.md  gate_detection_not_sea.py  package.xml  setup.py
gate_detection_pkg/: setup.cfg
gate_detection_pkg/gate_detection_pkg/: gate_detection.py
interface/: CMakeLists.txt  package.xml
interface/srv/: Gate.srv
launch_pkg/: CMakeLists.txt  package.xml
launch_pkg/launch/: project_two.launch.py
motion_planning/: CMakeLists.txt  package.xml
motion_planning/src/: motion_planning.cpp
